# RedfinScraper

./: .gitignore  LICENSE.txt  README.md  config.json  pyproject.toml  tests.ipynb  tests.py
redfin_scraper/: __init__.py  config.py
redfin_scraper/core/: redfin_scraper.py
redfin_scraper/resources/: json_tools.py  logging.py  selenium.py
